# color

./: .dockerignore  .gitignore  CODE_REVIEW.md  Dockerfile  ELITE_README.md  ELITE_ROADMAP.md  Makefile  SENIA_ELITE_v14_创新全案.md  SENIA_ELITE_总整理_v2.5.0.md  SENIA_ELITE_总整理_思路算法架构.md  color_film_mvp_v2.py  color_film_mvp_v3_optimized.py  color_match_engine.py  crawl_test_images.py  customer_tier_policy.default.json  decision_policy.default.json  deploy_public.py  docker-compose.yml  elite_api.py  elite_backup.py  elite_batch_parallel.py  elite_benchmark.py  elite_color_match.py  elite_config_reload.py  elite_counterfactual.py  elite_customer_tier.py  elite_db_migration.py  elite_decision_center.py  elite_event_bus.py  elite_i18n.py  elite_image_store.py  elite_innovation_engine.py  elite_innovation_state.py  elite_logging.py  elite_open_bandit.py  elite_policy_lab.py  elite_process_advisor.py  elite_quality_history.py  elite_report_pdf.py  elite_rollout_engine.py  (+64 more)
.github/workflows/: ci.yml
test_images/: README.md  metadata.csv  real_factory_metadata.csv
web_assets/: senia-elite-observatory.jsx  senia-elite-observatory.module.js
